--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.data.mongodb.uri=${db_uri}
 spring.data.mongodb.auto-index-creation=true
 
-# sha 256 encodin
+# sha 256 encoding
 app.jwt-secret=${jwt-secret}
 app.jwt-expiration-milliseconds=${jwt-expiration}
 
