--- a/src/discord-frontend/package.json
+++ b/src/discord-frontend/package.json
@@ -2,17 +2,18 @@
 	"name": "discord-frontend",
 	"version": "0.1.0",
 	"private": true,
-	"proxy": "http://localhost:8080",
 	"dependencies": {
 		"@emotion/react": "^11.10.0",
 		"@emotion/styled": "^11.10.0",
 		"@mui/icons-material": "^5.10.2",
 		"@mui/material": "^5.10.1",
 		"@reduxjs/toolkit": "^1.8.5",
+		"@stomp/stompjs": "^7.0.0",
 		"@testing-library/jest-dom": "^5.17.0",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
 		"axios": "^1.5.0",
+		"http-proxy-middleware": "^2.0.6",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-redux": "^8.0.2",
@@ -24,7 +25,8 @@
 	},
 	"scripts": {
 		"start": "react-scripts start",
-		"build": "react-scripts build",
+		"cpy": "cp -a build/. ../main/resources/static/",
+		"build": "react-scripts build && cp -a build/. ../main/resources/static/",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
 	},
